--- a/app/src/main/res/layout/listview_carrinho.xml
+++ b/app/src/main/res/layout/listview_carrinho.xml
@@ -6,7 +6,8 @@
     android:layout_height="match_parent"
     android:background="@color/white"
     android:clickable="true"
-    android:padding="20dp">
+    android:paddingHorizontal="20dp"
+    android:paddingTop="10dp">
 
     <LinearLayout
         android:id="@+id/linearCarrinho"
@@ -52,15 +53,6 @@
                 android:layout_height="wrap_content">
 
                 <ImageButton
-                    android:id="@+id/btnEditar"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentBottom="true"
-                    android:layout_marginEnd="7dp"
-                    android:layout_toStartOf="@+id/btnExcluir"
-                    android:background="@drawable/ic_change" />
-
-                <ImageButton
                     android:id="@+id/btnExcluir"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -84,7 +76,7 @@
     <View
         android:layout_width="match_parent"
         android:layout_height="2dp"
-        android:layout_marginTop="5dp"
+        android:layout_marginTop="10dp"
         android:background="@color/gray_light"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />
+        app:layout_constraintTop_toBottomOf="@+id/linearCarrinho" />
 </androidx.constraintlayout.widget.ConstraintLayout>
